--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "light-bootstrap-dashboard-react",
+  "name": "learning-pack",
   "version": "1.3.0",
   "private": true,
   "dependencies": {
@@ -12,10 +12,13 @@
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
     "react-notification-system": "0.2.17",
+    "react-redux": "^7.2.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.0",
-    "react-toggle": "4.0.2"
+    "react-toggle": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.19",
